--- a/Montecarlo.ipynb
+++ b/Montecarlo.ipynb
@@ -79,7 +79,7 @@
     "#####################################################################################################\n",
     "\"\"\"\n",
     "As an exercise, we have calculated the Dirac matrices \n",
-    "by defining equation 9. \n",
+    "can be by defining equation 9. \n",
     "\n",
     "This part of the code can be omitted and the Dirac matrices \n",
     "defined in an array.\n",
