--- a/Montecarlo.ipynb
+++ b/Montecarlo.ipynb
@@ -79,10 +79,10 @@
     "#####################################################################################################\n",
     "\"\"\"\n",
     "As an exercise, we have calculated the Dirac matrices \n",
-    "can be by defining equation 9. \n",
+    "by defining equation 9. \n",
     "\n",
     "This part of the code can be omitted and the Dirac matrices \n",
-    "defined in an array.\n",
+    "can be defined in an array.\n",
     "\"\"\"\n",
     "\n",
     "ALP1=np.array([[0,0,0,1],    #define alpha matrices\n",
