--- a/Riemann sums.ipynb
+++ b/Riemann sums.ipynb
@@ -343,7 +343,7 @@
     "area_Riemann_sums=0\n",
     "for i in range(len(newAng)-1):\n",
     "    area_Riemann_sums=area_Riemann_sums+(gap*pi/180)*newSEp[i+1]\n",
-    "area_Riemann_sums"
+    "area_Riemann_sums #total cross section"
    ]
   }
  ],
