--- a/Riemann sums.ipynb
+++ b/Riemann sums.ipynb
@@ -6,17 +6,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#####################################################################################################\n",
-    "'''                                import the bookstores you need                                 '''\n",
-    "#####################################################################################################\n",
+    "###############################################################################################\n",
+    "'''                          import the bookstores you need                                 '''\n",
+    "###############################################################################################\n",
     "from math import pi,sin,cos,sqrt,acos \n",
     "from scipy.optimize import curve_fit\n",
     "import matplotlib.pyplot as plt \n",
     "import numpy as np\n",
     "import random\n",
-    "#####################################################################################################\n",
-    "'''                            solve the differential equations: RGE                              '''\n",
-    "#####################################################################################################\n",
+    "###############################################################################################\n",
+    "'''                      solve the differential equations: RGE                              '''\n",
+    "###############################################################################################\n",
     "#we define differential equations to be solved\n",
     "dy1 = lambda s,y1,y2,y3: (s**(-1))*(-(41/10)/(2*pi)-(1/(8*pi**2))*((199/50)/y1+(27/10)/y2+(44/5)/y3))\n",
     "dy2 = lambda s,y1,y2,y3: (s**(-1))*(-(-19/6)/(2*pi)-(1/(8*pi**2))*((9/10)/y1+(35/6)/y2+(12)/y3))\n",
@@ -74,9 +74,9 @@
     "    alpha3_inv.append(y3)\n",
     "    energy.append(s)      #save the mass center energy in an vector\n",
     "    s += h\n",
-    "#####################################################################################################    \n",
-    "'''                                computed the Dirac matrices                                    '''\n",
-    "#####################################################################################################\n",
+    "###############################################################################################\n",
+    "'''                          computed the Dirac matrices                                    '''\n",
+    "###############################################################################################\n",
     "\"\"\"\n",
     "As an exercise, we have calculated the Dirac matrices \n",
     "by defining equation 9. \n",
@@ -139,9 +139,9 @@
     "GM5=complex(0,1)*x3                       #gamma 5  \n",
     "\n",
     "GM=np.array([GM0,GM1,GM2,GM3]) #save the gamma arrays in an array\n",
-    "#####################################################################################################\n",
-    "'''                    Create a function that computes the invariant amplitude                    '''\n",
-    "#####################################################################################################\n",
+    "###############################################################################################\n",
+    "'''              create a function that computes the invariant amplitude                    '''\n",
+    "###############################################################################################\n",
     "\"\"\"\n",
     "(p0,p1,p2,p3) is a four-vector of the electron  incoming \n",
     "(p_0,p_1,p_2,p_3) is a four-vector of the electron outgoing\n",
@@ -228,9 +228,9 @@
     "    sm=tr0-tr1-tr2+tr3\n",
     "    amplitude=sm.real   #take the real part, the imagine part is zero\n",
     "    return amplitude\n",
-    "#####################################################################################################\n",
-    "'''                           calculated the differential cross section                           '''\n",
-    "#####################################################################################################\n",
+    "###############################################################################################\n",
+    "'''                     calculated the differential cross section                           '''\n",
+    "###############################################################################################\n",
     "\"\"\"\n",
     "Generates random moments at an energy between 820.68 and 1003.06 Gev\n",
     "and resolve the differential cross section numerically\n",
@@ -295,9 +295,9 @@
     "            dSigma = (2*pi*sin(Angle)) * (G**2*(s-me**2)*SM)/(2*2*pi**2*16*(KP)*2*2*2*s) \n",
     "            SEp.append(dSigma/2.56819e-9)\n",
     "            Ang.append(Angle*180/pi)\n",
-    "#####################################################################################################\n",
-    "'''                   Calculate total cross section by Riemann sums method                        '''\n",
-    "#####################################################################################################\n",
+    "###############################################################################################\n",
+    "'''             calculate total cross section by Riemann sums method                        '''\n",
+    "###############################################################################################\n",
     "\"\"\"\n",
     "we make 50 equal intervals of dispersion,\n",
     "and choose the maximum point of each interval,\n",
