--- a/Montecarlo.ipynb
+++ b/Montecarlo.ipynb
@@ -45,7 +45,7 @@
     "\n",
     "\n",
     "\"\"\"\n",
-    "Solving differential equations by the Runge-Kutta 4 method\n",
+    "solving differential equations by the Runge-Kutta 4 method\n",
     "\"\"\"\n",
     "s=sqr_s0\n",
     "for i in range(n+1):\n",
@@ -78,10 +78,10 @@
     "'''                          computed the Dirac matrices                                    '''\n",
     "###############################################################################################\n",
     "\"\"\"\n",
-    "As an exercise, we have calculated the Dirac matrices \n",
+    "as an exercise, we have calculated the Dirac matrices \n",
     "by defining equation 9. \n",
     "\n",
-    "This part of the code can be omitted and the Dirac matrices \n",
+    "this part of the code can be omitted and the Dirac matrices \n",
     "can be defined in an array.\n",
     "\"\"\"\n",
     "\n",
@@ -140,7 +140,7 @@
     "\n",
     "GM=np.array([GM0,GM1,GM2,GM3]) #save the gamma arrays in an array\n",
     "###############################################################################################\n",
-    "'''              Create a function that computes the invariant amplitude                    '''\n",
+    "'''              create a function that computes the invariant amplitude                    '''\n",
     "###############################################################################################\n",
     "\"\"\"\n",
     "(p0,p1,p2,p3) is a four-vector of the electron  incoming \n",
@@ -232,7 +232,7 @@
     "'''                     calculated the differential cross section                           '''\n",
     "###############################################################################################\n",
     "\"\"\"\n",
-    "Generates random moments at an energy between 820.68 and 1003.06 Gev\n",
+    "generates random moments at an energy between 820.68 and 1003.06 Gev\n",
     "and resolve the differential cross section numerically\n",
     "\"\"\"\n",
     "sp=[]  #mass center energy\n",
@@ -316,7 +316,7 @@
     "    return a[0]+a[1]*x+a[2]*x**2+a[3]*x**3+a[4]*x**4+a[5]*x**5+a[6]*x**6+a[7]*x**7+a[8]*x**8\n",
     "\n",
     "###############################################################################################\n",
-    "'''             Calculate total cross section by Monte Carlo method                         '''\n",
+    "'''             calculate total cross section by Monte Carlo method                         '''\n",
     "###############################################################################################\n",
     "\"\"\"\n",
     "we introduce the adjustment as an array of numbers\n",
