--- a/Riemann sums.ipynb
+++ b/Riemann sums.ipynb
@@ -45,7 +45,7 @@
     "\n",
     "\n",
     "\"\"\"\n",
-    "Solving differential equations by the Runge-Kutta 4 method\n",
+    "solving differential equations by the Runge-Kutta 4 method\n",
     "\"\"\"\n",
     "s=sqr_s0\n",
     "for i in range(n+1):\n",
@@ -78,10 +78,10 @@
     "'''                          computed the Dirac matrices                                    '''\n",
     "###############################################################################################\n",
     "\"\"\"\n",
-    "As an exercise, we have calculated the Dirac matrices \n",
+    "as an exercise, we have calculated the Dirac matrices \n",
     "by defining equation 9. \n",
     "\n",
-    "This part of the code can be omitted and the Dirac matrices \n",
+    "this part of the code can be omitted and the Dirac matrices \n",
     "can be defined in an array.\n",
     "\"\"\"\n",
     "\n",
@@ -232,7 +232,7 @@
     "'''                     calculated the differential cross section                           '''\n",
     "###############################################################################################\n",
     "\"\"\"\n",
-    "Generates random moments at an energy between 820.68 and 1003.06 Gev\n",
+    "generates random moments at an energy between 820.68 and 1003.06 Gev\n",
     "and resolve the differential cross section numerically\n",
     "\"\"\"\n",
     "sp=[]  #mass center energy\n",
