--- a/Montecarlo.ipynb
+++ b/Montecarlo.ipynb
@@ -7,7 +7,7 @@
    "outputs": [],
    "source": [
     "###############################################################################################\n",
-    "'''                          import the bookstores you need                                 '''\n",
+    "'''                          Import the bookstores you need                                 '''\n",
     "###############################################################################################\n",
     "from math import pi,sin,cos,sqrt,acos \n",
     "from scipy.optimize import curve_fit\n",
@@ -15,7 +15,7 @@
     "import numpy as np\n",
     "import random\n",
     "###############################################################################################\n",
-    "'''                      solve the differential equations: RGE                              '''\n",
+    "'''                      Solving the differential equations: RGE                              '''\n",
     "###############################################################################################\n",
     "#we define differential equations to be solved\n",
     "dy1 = lambda s,y1,y2,y3: (s**(-1))*(-(41/10)/(2*pi)-(1/(8*pi**2))*((199/50)/y1+(27/10)/y2+(44/5)/y3))\n",
